# jpfin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jpfin/: __init__.py  _cli_helpers.py  _utils.py  analyze.py  backtest.py  cli.py  composite.py  correlation.py  decay.py  event_study.py  factor_registry.py  fetch.py  formatters.py  fusion.py  metrics.py  models.py  portfolio.py  rolling.py  screen.py  store.py  universe.py
src/jpfin/cli/: __init__.py  _common.py  analysis.py  analyze.py  backtest.py  data.py
src/jpfin/data/: nikkei225.json  topix_core30.json
tests/: test_analyze.py  test_backtest.py  test_cli.py  test_cli_fetch.py  test_cli_run.py  test_composite.py  test_correlation.py  test_decay.py  test_event_study.py  test_factor_registry.py  test_fetch.py  test_formatters.py  test_fusion.py  test_portfolio.py  test_rolling.py  test_screen.py  test_store.py  test_universe.py
tests/integration/: test_smoke.py
