[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpfin"
version = "0.1.0"
description = "Unified CLI for Japanese equity factor analysis"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ajtgjmdjp" }]
keywords = [
    "japan", "finance", "quant", "factor", "cli", "EDINET", "yfinance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "japan-finance-factors[all]>=0.2.1",
    "japan-finance-codes>=0.1.1",
    "click>=8.0",
]

[project.scripts]
jpfin = "jpfin.cli:main"

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/jpfin"
Repository = "https://github.com/ajtgjmdjp/jpfin"

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.*", ".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/jpfin"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
